@@ -2,9 +2,12 @@ package com.vectornode.memory.query.service;
 
 import com.vectornode.memory.config.LLMProvider;
 import com.vectornode.memory.entity.Context;
+import com.vectornode.memory.entity.KnowledgeBase;
 import com.vectornode.memory.entity.RagEntity;
-import com.vectornode.memory.query.dto.QueryRequest;
-import com.vectornode.memory.query.dto.QueryResponse;
+import com.vectornode.memory.entity.Relation;
+import com.vectornode.memory.entity.enums.ConverserRole;
+import com.vectornode.memory.query.dto.request.QueryRequest;
+import com.vectornode.memory.query.dto.response.QueryResponse;
 import com.vectornode.memory.query.repository.ContextRepository;
 import com.vectornode.memory.query.repository.EntityRepository;
 import com.vectornode.memory.query.repository.KnowledgeBaseRepository;
@@ -19,8 +22,10 @@ import org.mockito.MockedStatic;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.time.Instant;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
 
@@ -61,9 +66,10 @@ class QueryServiceTest {
         }
     }
 
+    // ==================== CONTEXT TESTS ====================
+
     @Test
     void searchContexts_ShouldReturnResults_WhenMatchesFound() {
-        // Arrange
         String query = "test query";
         float[] dummyEmbedding = new float[] { 0.1f, 0.2f, 0.3f };
         UUID contextId = UUID.randomUUID();
@@ -79,146 +85,297 @@ class QueryServiceTest {
         };
 
         when(contextRepository.findSimilarWithScore(anyString(), anyInt()))
-                .thenReturn(List.of(mockRow));
+                .thenReturn(Collections.singletonList(mockRow));
 
         QueryRequest request = new QueryRequest();
         request.setQuery(query);
         request.setLimit(5);
 
-        // Act
         QueryResponse response = queryService.searchContexts(request);
 
-        // Assert
         assertNotNull(response);
-        assertEquals(query, response.getQuery());
         assertEquals(1, response.getResults().size());
-
-        QueryResponse.SearchResult result = response.getResults().get(0);
-        assertEquals(contextId, result.getId());
-        assertEquals(0.95, result.getScore());
-        assertEquals("CHUNK", result.getType());
-
-        verify(contextRepository).findSimilarWithScore(anyString(), eq(5));
+        assertEquals(0.95, response.getResults().get(0).getScore());
     }
 
     @Test
+    void getContextsByKnowledgeBase_ShouldReturnContexts() {
+        UUID kbId = UUID.randomUUID();
+        Context context = new Context();
+        context.setId(UUID.randomUUID());
+        context.setTextChunk("Sample Text");
+        context.setChunkIndex(1);
+
+        when(contextRepository.findByKnowledgeBaseId(kbId)).thenReturn(List.of(context));
+
+        QueryResponse response = queryService.getContextsByKnowledgeBase(kbId);
+
+        assertNotNull(response);
+        assertEquals(1, response.getResults().size());
+        assertEquals(1.0, response.getResults().get(0).getScore());
+        assertEquals("CHUNK", response.getResults().get(0).getType());
+    }
+
+    @Test
+    void getRecentContexts_ShouldReturnContexts() {
+        Context context = new Context();
+        context.setId(UUID.randomUUID());
+        context.setTextChunk("Recent Text");
+
+        when(contextRepository.findRecentContexts(7)).thenReturn(List.of(context));
+
+        QueryResponse response = queryService.getRecentContexts(7);
+
+        assertNotNull(response);
+        assertEquals(1, response.getResults().size());
+    }
+
+    @Test
+    void searchRecentContexts_ShouldReturnResultsWithScores() {
+        String query = "recent query";
+        float[] dummyEmbedding = new float[] { 0.1f };
+        UUID contextId = UUID.randomUUID();
+
+        llmProviderMock.when(() -> LLMProvider.getEmbedding(eq(query)))
+                .thenReturn(dummyEmbedding);
+
+        Object[] mockRow = new Object[] { contextId, "Recent Chunk", 0, 0.85 };
+
+        when(contextRepository.findRecentSimilarWithScore(eq(7), anyString(), anyInt()))
+                .thenReturn(Collections.singletonList(mockRow));
+
+        QueryRequest request = new QueryRequest();
+        request.setQuery(query);
+        request.setLimit(5);
+
+        QueryResponse response = queryService.searchRecentContexts(request, 7);
+
+        assertNotNull(response);
+        assertEquals(1, response.getResults().size());
+        assertEquals(0.85, response.getResults().get(0).getScore());
+    }
+
+    @Test
+    void getSiblingContexts_ShouldReturnSiblings() {
+        UUID contextId = UUID.randomUUID();
+        Context sibling = new Context();
+        sibling.setId(UUID.randomUUID());
+        sibling.setTextChunk("Sibling Text");
+        sibling.setChunkIndex(2);
+
+        when(contextRepository.findSiblingContexts(contextId)).thenReturn(List.of(sibling));
+
+        QueryResponse response = queryService.getSiblingContexts(contextId);
+
+        assertNotNull(response);
+        assertEquals(1, response.getResults().size());
+        assertEquals("SIBLING_CHUNK", response.getResults().get(0).getType());
+    }
+
+    // ==================== ENTITY TESTS ====================
+
+    @Test
     void searchEntities_ShouldReturnResults_WhenEntitiesFound() {
-        // Arrange
         String query = "Elon Musk";
-        float[] dummyEmbedding = new float[] { 0.5f, 0.5f, 0.5f };
+        float[] dummyEmbedding = new float[] { 0.5f };
         UUID entityId = UUID.randomUUID();
 
         llmProviderMock.when(() -> LLMProvider.getEmbedding(eq(query)))
                 .thenReturn(dummyEmbedding);
 
-        Object[] mockRow = new Object[] {
-                entityId, // id
-                "Elon Musk", // name
-                "PERSON", // type
-                "CEO of Tesla", // description
-                0.88 // score
-        };
+        Object[] mockRow = new Object[] { entityId, "Elon Musk", "PERSON", "CEO", 0.88 };
 
         when(entityRepository.findSimilarEntitiesWithScore(anyString(), anyInt()))
-                .thenReturn(List.of(mockRow));
+                .thenReturn(Collections.singletonList(mockRow));
 
         QueryRequest request = new QueryRequest();
         request.setQuery(query);
-        request.setLimit(3);
 
-        // Act
         QueryResponse response = queryService.searchEntities(request);
 
-        // Assert
         assertNotNull(response);
         assertEquals(1, response.getResults().size());
         assertEquals("ENTITY", response.getResults().get(0).getType());
-        assertEquals("Elon Musk", response.getResults().get(0).getContent());
     }
 
     @Test
-    void hybridSearch_ShouldCombineVectorAndGraphResults() {
-        // Arrange
-        String query = "Complex query";
-        float[] dummyEmbedding = new float[] { 0.1f };
-        UUID contextId = UUID.randomUUID();
-        UUID entityId = UUID.randomUUID();
+    void getEntityByName_ShouldReturnEntity() {
+        String name = "Java";
+        RagEntity entity = new RagEntity();
+        entity.setName(name);
+        when(entityRepository.findByName(name)).thenReturn(Optional.of(entity));
 
-        llmProviderMock.when(() -> LLMProvider.getEmbedding(anyString()))
+        Optional<RagEntity> result = queryService.getEntityByName(name);
+
+        assertTrue(result.isPresent());
+        assertEquals(name, result.get().getName());
+    }
+
+    @Test
+    void disambiguateEntity_ShouldReturnEntity() {
+        String entityName = "Apple";
+        String context = "Technology company";
+        float[] dummyEmbedding = new float[] { 0.9f };
+        RagEntity entity = new RagEntity();
+        entity.setName("Apple Inc.");
+
+        llmProviderMock.when(() -> LLMProvider.getEmbedding(eq(context)))
                 .thenReturn(dummyEmbedding);
 
-        // Step 1: Mock Vector Search on Contexts
+        when(entityRepository.disambiguateEntity(eq(entityName), anyString()))
+                .thenReturn(Optional.of(entity));
+
+        Optional<RagEntity> result = queryService.disambiguateEntity(entityName, context);
+
+        assertTrue(result.isPresent());
+        assertEquals("Apple Inc.", result.get().getName());
+    }
+
+    @Test
+    void getContextsForEntity_ShouldReturnContexts() {
+        UUID entityId = UUID.randomUUID();
+        Object[] mockRow = new Object[] { UUID.randomUUID(), "Context mentioning entity" };
+
+        when(entityRepository.findContextsForEntity(entityId)).thenReturn(Collections.singletonList(mockRow));
+
+        QueryResponse response = queryService.getContextsForEntity(entityId);
+
+        assertNotNull(response);
+        assertEquals(1, response.getResults().size());
+        assertEquals("ENTITY_CONTEXT", response.getResults().get(0).getType());
+    }
+
+    @Test
+    void mergeEntities_ShouldCallRepository() {
+        UUID source = UUID.randomUUID();
+        UUID target = UUID.randomUUID();
+
+        queryService.mergeEntities(source, target);
+
+        verify(entityRepository).mergeEntities(source, target);
+    }
+
+    // ==================== KNOWLEDGE BASE TESTS ====================
+
+    @Test
+    void searchHistory_ShouldReturnResults() {
+        String query = "past conversion";
+        float[] dummyEmbedding = new float[] { 0.1f };
+
+        llmProviderMock.when(() -> LLMProvider.getEmbedding(eq(query)))
+                .thenReturn(dummyEmbedding);
+
+        Object[] mockRow = new Object[] { UUID.randomUUID(), "Chat log", "user1", "bot", 0.75 };
+
+        when(knowledgeBaseRepository.findSimilarWithScore(anyString(), anyInt()))
+                .thenReturn(Collections.singletonList(mockRow));
+
+        QueryRequest request = new QueryRequest();
+        request.setQuery(query);
+
+        QueryResponse response = queryService.searchHistory(request);
+
+        assertNotNull(response);
+        assertEquals(1, response.getResults().size());
+        assertEquals(0.75, response.getResults().get(0).getScore());
+    }
+
+    @Test
+    void getHistoryByUser_ShouldReturnHistory() {
+        String uid = "user123";
+        KnowledgeBase kb = new KnowledgeBase();
+        kb.setId(UUID.randomUUID());
+        kb.setContent("History");
+        kb.setConverser(ConverserRole.AGENT);
+
+        when(knowledgeBaseRepository.findByUidOrderByCreatedAtDesc(uid)).thenReturn(List.of(kb));
+
+        QueryResponse response = queryService.getHistoryByUser(uid);
+
+        assertNotNull(response);
+        assertEquals(1, response.getResults().size());
+    }
+
+    @Test
+    void deleteUserData_ShouldCallRepository() {
+        String uid = "user_delete";
+        queryService.deleteUserData(uid);
+        verify(knowledgeBaseRepository).deleteByUid(uid);
+    }
+
+    // ==================== RELATION TESTS ====================
+
+    @Test
+    void getOutgoingConnections_ShouldReturnRelations() {
+        UUID entityId = UUID.randomUUID();
+        Object[] mockRow = new Object[] { "KNOWS", "Target Entity", 0.8 };
+
+        when(relationRepository.findOutgoingRelations(entityId)).thenReturn(Collections.singletonList(mockRow));
+
+        QueryResponse response = queryService.getOutgoingConnections(entityId);
+
+        assertNotNull(response);
+        assertEquals(1, response.getResults().size());
+        assertEquals("RELATION", response.getResults().get(0).getType());
+    }
+
+    @Test
+    void getTwoHopConnections_ShouldReturnEntityNames() {
+        UUID entityId = UUID.randomUUID();
+        List<String> connections = List.of("FriendOfFriend");
+
+        when(relationRepository.findTwoHopConnections(entityId)).thenReturn(connections);
+
+        QueryResponse response = queryService.getTwoHopConnections(entityId);
+
+        assertNotNull(response);
+        assertEquals(1, response.getResults().size());
+        assertEquals(0.5, response.getResults().get(0).getScore()); // Score fixed to 0.5
+    }
+
+    @Test
+    void getTopRelations_ShouldReturnRelations() {
+        Object[] mockRow = new Object[] { "Source", "LOVES", "Target", 0.9 };
+
+        when(relationRepository.findTopRelations(10)).thenReturn(Collections.singletonList(mockRow));
+
+        QueryResponse response = queryService.getTopRelations(10);
+
+        assertNotNull(response);
+        assertEquals(1, response.getResults().size());
+        assertTrue(response.getResults().get(0).getContent().contains("->"));
+    }
+
+    // ==================== HYBRID SEARCH TEST ====================
+
+    @Test
+    void hybridSearch_ShouldCombineResults() {
+        String query = "Complex query";
+        UUID contextId = UUID.randomUUID();
+
+        llmProviderMock.when(() -> LLMProvider.getEmbedding(anyString()))
+                .thenReturn(new float[] { 0.1f });
+
+        // Context Result
         Object[] contextRow = new Object[] { contextId, "Context text", 0, 0.9 };
         when(contextRepository.findSimilarWithScore(anyString(), anyInt()))
-                .thenReturn(List.of(contextRow));
+                .thenReturn(Collections.singletonList(contextRow));
 
-        // Step 2: Mock Entities in that Context
-        RagEntity mockEntity = RagEntity.builder()
-                .id(entityId)
-                .name("Linked Entity")
-                .type("TOPIC")
-                .build();
-        when(entityRepository.findEntitiesForContext(contextId))
-                .thenReturn(List.of(mockEntity));
+        // Linked Entity Result
+        RagEntity mockEntity = new RagEntity();
+        mockEntity.setId(UUID.randomUUID());
+        mockEntity.setName("Linked");
+        when(entityRepository.findEntitiesForContext(contextId)).thenReturn(List.of(mockEntity));
 
-        // Step 3: Mock Vector Search on Entities directly
+        // Direct Entity Result
         when(entityRepository.findSimilarEntitiesWithScore(anyString(), anyInt()))
                 .thenReturn(Collections.emptyList());
 
         QueryRequest request = new QueryRequest();
         request.setQuery(query);
-        request.setLimit(5);
 
-        // Act
         QueryResponse response = queryService.hybridSearch(request);
 
-        // Assert
-        assertNotNull(response);
-        // Should have 1 context + 1 linked entity = 2 results
-        assertEquals(2, response.getResults().size());
-
-        // Verify Context Result
-        assertTrue(response.getResults().stream()
-                .anyMatch(r -> r.getId().equals(contextId) && r.getType().equals("CHUNK")));
-
-        // Verify Linked Entity Result (Score should be 0.9 * 0.8 = 0.72)
-        assertTrue(response.getResults().stream()
-                .anyMatch(r -> r.getId().equals(entityId) && r.getType().equals("LINKED_ENTITY")));
-    }
-
-    @Test
-    void getTwoHopConnections_ShouldReturnEntityNames() {
-        // Arrange
-        UUID entityId = UUID.randomUUID();
-        List<String> connections = List.of("Alice", "Bob");
-
-        when(relationRepository.findTwoHopConnections(entityId))
-                .thenReturn(connections);
-
-        // Act
-        QueryResponse response = queryService.getTwoHopConnections(entityId);
-
-        // Assert
-        assertNotNull(response);
-        assertEquals("2hop:" + entityId, response.getQuery());
-        assertEquals(2, response.getResults().size());
-        assertEquals("TWO_HOP_ENTITY", response.getResults().get(0).getType());
-    }
-
-    @Test
-    void getEntityByName_ShouldReturnEntity_WhenFound() {
-        // Arrange
-        String name = "Java";
-        RagEntity entity = new RagEntity();
-        entity.setName(name);
-
-        when(entityRepository.findByName(name)).thenReturn(Optional.of(entity));
-
-        // Act
-        Optional<RagEntity> result = queryService.getEntityByName(name);
-
-        // Assert
-        assertTrue(result.isPresent());
-        assertEquals(name, result.get().getName());
+        assertEquals(2, response.getResults().size()); // 1 context + 1 linked entity
     }
 }
